# SDLTemplate

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
